--- a/web_sard/Views/Portage/CreateOut.cshtml
+++ b/web_sard/Views/Portage/CreateOut.cshtml
@@ -6,19 +6,20 @@
 }
 
 
-    <form asp-action="CreateOut" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="Id" />
-        <input type="hidden" asp-for="Customer.Title" />
-        <input type="hidden" asp-for="Weight1" />
-        <input type="hidden" asp-for="FkCustomer" />
-        <input type="hidden" asp-for="Weight2IsBascul" />
-        <input type="hidden" asp-for="FkContractType" />
-        <input type="hidden" asp-for="KindTitle" />
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
+<form asp-action="CreateOut" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="Customer.Title" />
+    <input type="hidden" asp-for="Weight1" />
+    <input type="hidden" asp-for="FkCustomer" />
+    <input type="hidden" asp-for="Weight2IsBascul" />
+    <input type="hidden" asp-for="FkContractType" />
+    <input type="hidden" asp-for="KindTitle" />
+  
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
                         <div class="card bg-gray-200">
                             <div class="card-body">
                                 <div class="row">
@@ -49,27 +50,13 @@
 
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="Txt" class="control-label"></label>
-                            <textarea asp-for="Txt" class="form-control"></textarea>
-                            <span asp-validation-for="Txt" class="text-danger"></span>
-                        </div>
+
+
 
                     </div>
-                </div>
 
+                    <div class="col-md-6">
 
-            </div>
-            <div class="col-md-6" id="vaziatContract">
-
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-body">
-                <div class="card-title">مشخصات خودرو</div>
-                <div class="row">
-                    <div class="col-md-7">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -111,31 +98,47 @@
                         </div>
 
                     </div>
+                </div>
+               
+            </div>
+        </div>
+    
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label asp-for="Txt" class="control-label"></label>
+                                <textarea asp-for="Txt" class="form-control"></textarea>
+                                <span asp-validation-for="Txt" class="text-danger"></span>
+                            </div>
+                        </div>
 
-                    @if (Model.ContractType.IsProduct1Packing0 == true)
-                    {
-                        <div class="col-md-3">
-                            <div class="card bg-gradient-success">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="form-group ">
-                                            <label class="control-label text-white">وزن</label>
-                                            <span class="badge badge-info fa fa-hdd"> اول : @Model.Weight1.GetValueOrDefault().ToString("#####0.##")</span>
-                                            <span class="badge badge-light h5 fa fa-hdd" id="WeightNet"> خالص : </span>
-                                            <div class="input-group">
-                                                <input asp-for="Weight2" value="@Model.Weight2.GetValueOrDefault().ToString("#####0.##")" 
-                                                       class="form-control w-50 @(Model.Weight2.HasValue?"noactive":"") " readonly 
-                                                        ondblclick="$('Weight1IsBascul').val(false), $(this).removeAttr('readonly');"
-                                                       />
-                                                <div class="input-group-btn  w-50">
-                                                    <button class="btn btn-light w-100" id="Weight2B" type="button">
-                                                        <i class="fa fa-hdd" id="Weight2I"> @web_sard.Models.cl.bascul.WeightBacul </i>
-                                                    </button>
-                                                </div>
+                    </div>
+                </div>
+                @if (Model.ContractType.IsProduct1Packing0 == true)
+                {
+                    <div class="col-md-3">
+                        <div class="card bg-gradient-success">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="form-group ">
+                                        <label class="control-label text-white">وزن</label>
+                                        <span class="badge badge-info fa fa-hdd"> اول : @Model.Weight1.GetValueOrDefault().ToString("#####0.##")</span>
+                                        <span class="badge badge-light h5 fa fa-hdd" id="WeightNet"> خالص : </span>
+                                        <div class="input-group">
+                                            <input asp-for="Weight2" value="@Model.Weight2.GetValueOrDefault().ToString("#####0.##")"
+                                                   class="form-control w-50 @(Model.Weight2.HasValue?"noactive":"") " readonly
+                                                   ondblclick="$('Weight1IsBascul').val(false), $(this).removeAttr('readonly');" />
+                                            <div class="input-group-btn  w-50">
+                                                <button class="btn btn-light w-100" id="Weight2B" type="button">
+                                                    <i class="fa fa-hdd" id="Weight2I"> @web_sard.Models.cl.bascul.WeightBacul </i>
+                                                </button>
                                             </div>
-                                            <span asp-validation-for="Weight2" class="text-danger"></span>
                                         </div>
-
+                                        <span asp-validation-for="Weight2" class="text-danger"></span>
                                     </div>
 
                                 </div>
@@ -144,17 +147,21 @@
 
                         </div>
 
-                    }
+                    </div>
 
-                </div>
+                }
+
             </div>
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary fa fa-save"> ثبت</button>
-            <button type="submit" name="print" class="btn btn-info fa fa-print" value="ثبت و چاپ"> ثبت و چاپ</button>
+    </div>
+            <div class="form-group float-left">
+                <button type="submit" class="btn btn-primary fa fa-save"> ثبت خروج خودرو</button>
+                <button type="submit" name="print" class="btn btn-info fa fa-print" value="ثبت و چاپ"> ثبت و چاپ</button>
 
-        </div>
-    </form>
+            </div>
+            <br />
+</form>
+<hr />
 <div class="row">
     <div class="col-md-9">
         <div class="row">
@@ -174,7 +181,7 @@
                     </div>
                 </div>
             }
-        </div> 
+        </div>
 
         <table class="table">
 
@@ -196,7 +203,8 @@
                     <tr>
                         <td>@item.Date.ToPersianDateTime()</td>
                         <td>@item.Count</td>
-                        <td>@if (Model.ContractType.IsProduct1Packing0) { @item.Product} @item.Packing</td>
+                        <td>@if (Model.ContractType.IsProduct1Packing0)
+                        {@item.Product} @item.Packing</td>
                         <td>@item.CodeLocation</td>
                         <td>@string.Join(",", item.ListInjurysTbl.Select(a => a.title).ToList())</td>
                         <td>@item.Txt</td>
@@ -231,9 +239,11 @@
 
 </div>
 
+<hr />
 
+<div   id="vaziatContract">
 
-
+</div>
 
 
 <div>
@@ -270,7 +280,7 @@
     {
         <script>
 
-            Contractbutton('#FkCustomer', '#vaziatContract','@Model.Id')
+            Contractbutton('#Id', '#vaziatContract','@Model.Id')
 
         </script>
 
