--- a/web_sard/Views/Portage/CreateOut.cshtml
+++ b/web_sard/Views/Portage/CreateOut.cshtml
@@ -39,11 +39,11 @@
                                     </div>
 
                                     <div class="form-group col-md-12">
-                                        <label asp-for="Customer.Title" class="control-label"></label>
+                                        <label asp-for="FkCustomer" class="control-label"></label>
 
                                         <input asp-for="Customer.Title" class="form-control" readonly>
 
-                                        <span asp-validation-for="Customer.Title" class="text-danger"></span>
+                                        <span asp-validation-for="FkCustomer" class="text-danger"></span>
                                     </div>
                                 </div>
 
